Fixed spacing in the modal dialog's dependant list

--- a/modules/app/src/main/resources/assets/styles/dialog/dependant-items-dialog.less
+++ b/modules/app/src/main/resources/assets/styles/dialog/dependant-items-dialog.less
@@ -232,7 +232,7 @@
             }
 
             .@{_COMMON_PREFIX}wrapper {
-              margin: 0;
+              margin: 0 15px 0 0;
               height: 16px;
               width: 16px;
               line-height: 14px;
@@ -249,8 +249,6 @@
               }
 
               .@{_COMMON_PREFIX}names-view {
-                margin-left: 30px;
-
                 h6 {
                   height: 18px;
                 }
